# FAME-Smart-Flasher

./: README.md
android/: .gitignore  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
linux/: .gitignore  CMakeLists.txt  build.sh
linux/flatpak/: com.fyrbyadditive.fame-smart-flasher.desktop  com.fyrbyadditive.fame-smart-flasher.metainfo.xml  com.fyrbyadditive.fame-smart-flasher.yml
linux/resources/: resources.qrc
linux/src/: main.cpp
linux/src/models/: FirmwareFile.cpp  FirmwareFile.h  FlashingState.h  SerialPort.h
linux/src/protocol/: ESP32Protocol.cpp  ESP32Protocol.h  SLIPCodec.cpp  SLIPCodec.h
linux/src/serial/: SerialConnection.cpp  SerialConnection.h  SerialPortManager.cpp  SerialPortManager.h
linux/src/services/: FlashingService.cpp  FlashingService.h
linux/src/ui/: AboutDialog.cpp  AboutDialog.h  FlasherWidget.cpp  FlasherWidget.h  MainWindow.cpp  MainWindow.h  SerialMonitorWidget.cpp  SerialMonitorWidget.h
macOS/: .gitignore  build.sh
macOS/FAME Smart Flasher/: FAME_Smart_Flasher.entitlements  Info.plist
macOS/FAME Smart Flasher.xcodeproj/: project.pbxproj
macOS/FAME Smart Flasher.xcodeproj/xcshareddata/xcschemes/: FAME Smart Flasher.xcscheme
macOS/FAME Smart Flasher/App/: FAMESmartFlasherApp.swift
macOS/FAME Smart Flasher/Models/: FlashingState.swift  SerialPort.swift
macOS/FAME Smart Flasher/Services/Flashing/: FlashingService.swift
macOS/FAME Smart Flasher/ViewModels/: FlasherViewModel.swift
macOS/FAME Smart Flasher/Views/: AboutView.swift  ContentView.swift  FlasherView.swift  SerialMonitorView.swift
windows/: .gitignore  App.xaml  App.xaml.cs  FAMESmartFlasher.csproj  MainWindow.xaml  MainWindow.xaml.cs  build.cmd  build.ps1
windows/Converters/: ValueConverters.cs
windows/Models/: FirmwareFile.cs  FlashingState.cs  SerialPort.cs
windows/Protocol/: ESP32Protocol.cs  SLIPCodec.cs
windows/Serial/: SerialConnection.cs
windows/Services/: FlashingService.cs  SerialPortManager.cs
windows/ViewModels/: MainViewModel.cs
(+21 files in other folders)
